# HerosInsight

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  GWCA_search.code-search  LICENSE  README.md  RELEASING.md  StoC_packets.h  attribute_or_title.cpp  attribute_store.cpp  attribute_store.h  autovec.h  bitview.h  buffer.h  build.py  capacity_hints.cpp  capacity_hints.h  catalog.cpp  catalog.h  constants.h  crash_handling.h  custom_agent_data.cpp  custom_agent_data.h  custom_skill_data.cpp  custom_skill_data.h  damage_display.cpp  damage_display.h  data_cache.h  debug.cpp  debug_display.cpp  debug_display.h  debug_ui.cpp  debug_ui.h  effect_initiator.cpp  effect_initiator.h  effect_tracking.cpp  effect_tracking.h  encstr_debugger.cpp  (+52 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.zed/: tasks.json
Injector/: CMakeLists.txt  main.cpp
Launcher/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt  async_lazy.h  attribute_or_title.h  attribute_store.h  autovec.h  behaviours.cpp  behaviours.h  bitspan.h  bitview.h  buffer.h  color_conv.cpp  color_conv.h  color_macros.h  compiletime_string.h  constants.h  crash_handling.h  custom_agent_data.cpp  custom_skill_data.cpp  custom_skill_data.h  damage_display.h  debug.cpp  debug.h  debug_display.cpp  debug_ui.cpp  effect_initiator.cpp  effect_tracking.cpp  effect_tracking.h  encstr_debugger.cpp  encstr_debugger.h  energy_display.cpp  filtering.cpp  filtering.h  fixed_set.h  front_back_pair.h  hero_ai.cpp  imgui_custom.cpp  imgui_custom.h  imgui_customize.cpp  imgui_customize.h  imgui_ext.h  (+49 more)
Source/cmake/: gwca.cmake  imgui.cmake  simdutf.cmake
cmake/: gwca.cmake  imgui.cmake
